fix(background-color: reverted scrollbar color updates

--- a/frontend/packages/console-app/src/components/cloud-shell/CloudShellTab.scss
+++ b/frontend/packages/console-app/src/components/cloud-shell/CloudShellTab.scss
@@ -9,7 +9,7 @@
   }
 
   &__header {
-    background-color: var(--pf-global--BackgroundColor--200);
+    background-color: var(--pf-global--palette--black-200);
     align-items: center;
     display: flex;
     flex-shrink: 0;
